worked on the routes and refining the queries

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "node seeds/seed.js",
-    "watch": "nodemon sever.js"
+    "seed": "node seeds/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,13 +21,13 @@
   "homepage": "https://github.com/monacoglynn/MVC-tech-blog#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "colors": "^1.4.0",
     "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.18",
     "sequelize": "^6.21.1"
   }
 }
